[tool.poetry]
name = "python_magnettools"
version = "1.0.7"
description = "Magnet Tools Python bindings"
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
