[tool.poetry]
name = "magnettools"
version = "1.1.0"
description = "Magnet Tools Python bindings"
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
mplcursors = "^0.5.3"
pandas = "^1.5.3"
numpy = "^1.24.0"
scipy = "^1.12.0"
tabulate = "^0.9.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
